--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 attrs==24.2.0
+beautifulsoup4==4.12.3
 blinker==1.8.2
 certifi==2024.8.30
 charset-normalizer==3.3.2
@@ -21,5 +22,6 @@ referencing==0.35.1
 requests==2.32.3
 rpds-py==0.20.0
 six==1.16.0
+soupsieve==2.6
 urllib3==2.2.2
 Werkzeug==3.0.4
