--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ flake8==7.1.1
 flasgger==0.9.7.1
 Flask==3.0.3
 Flask-JWT-Extended==4.6.0
+gunicorn==23.0.0
 identify==2.6.0
 idna==3.8
 importlib_metadata==8.4.0
